--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,7 @@
   --dairy-color: #fcfcfc;
   --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-/*Global*/
-
+/*------------------------Global--------------------------*/
 body {
   position: relative;
   background-color: var(--white-color);
@@ -74,9 +73,31 @@ p {
   letter-spacing: 0.02em;
 }
 .container {
-  width: 428px;
   padding: 0 15px;
   margin: 0 auto;
+}
+@media screen and (min-width: 428px) {
+  .container {
+    width: 428px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .container {
+    width: 1158px;
+  }
+}
+.section {
+  padding: 120px 0;
+}
+@media screen and (max-width: 1157px) {
+  .section {
+    padding: 96px 0;
+  }
 }
 .visually-hidden {
   position: absolute;
@@ -96,7 +117,7 @@ p {
   padding: 0;
 }
 
-/*Header*/
+/*-----------------------Header--------------------------*/
 
 .menu {
   position: relative;
@@ -143,7 +164,6 @@ p {
   position: relative;
   transition: color var(--transition);
 }
-
 .current {
   color: var(--ocean-color);
   position: relative;
@@ -164,13 +184,11 @@ p {
 .nav-menu-item:focus {
   color: var(--ocean-color);
 }
-
 address {
   font-style: normal;
   padding: 24px 0;
   margin-left: auto;
 }
-
 .list-contacts {
   font-size: 16px;
   line-height: 1.5;
@@ -186,10 +204,11 @@ address {
   color: var(--ocean-color);
 }
 
-/*Footer*/
+/*--------------------------Footer--------------------------*/
 
 .footer-section {
   background-color: var(--navi-blue-color);
+  width: 100%;
   padding: 96px 0;
 }
 .footer-tab {
@@ -248,7 +267,6 @@ address {
 .social-footer-link:focus {
   background-color: var(--green-color);
 }
-
 .footer-subscribe-text {
   font-style: normal;
   color: var(--white-color);
@@ -256,13 +274,13 @@ address {
   margin-bottom: 16px;
 }
 .footer-subscribe-form {
-  display: flex;
   flex-direction: column;
   align-items: center;
 }
 .subscribe-email-input {
-  width: 398px;
+  width: 100%;
   height: 40px;
+  padding-left: 16px;
   border: 1px solid var(--white-color);
   background-color: transparent;
   font-size: 12px;
@@ -273,15 +291,13 @@ address {
   color: var(--white-color);
   margin-bottom: 16px;
 }
-
 .subscribe-email-input::placeholder {
   color: var(--cloud-color);
 }
-
 .button-subscribe {
   min-width: 165px;
   height: 40px;
-
+  margin: 0 auto;
   align-items: center;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -299,17 +315,17 @@ address {
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .button-subscribe:hover,
 .button-subscribe:focus {
   background: var(--ocean-color);
 }
-
 .icon-subscribe {
   margin-left: 16px;
   fill: var(--cloud-color);
 }
-/*Modal*/
+
+/*--------------------------Modal---------------------------*/
+
 @keyframes openingModal {
   0% {
     transform: scale(0);
@@ -335,21 +351,17 @@ address {
   animation-direction: normal;
   transition: opacity var(--transition), visibility var(--transition);
 }
-
 .modal-form {
-  display: flexbox;
-  align-items: start;
-  justify-content: start;
   position: absolute;
   background-color: var(--cornflower-color);
   background: var(--dairy-color);
-  width: 408px;
-  min-height: 584px;
+  width: 392px;
+  max-height: 584px;
   margin: 0;
   padding: 0;
-  padding: 72px 24px 24px 24px;
+  padding: 72px 24px 24px;
   border-radius: 4px;
-  position: absolute;
+
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -357,6 +369,15 @@ address {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   transition: transform var(--transition);
+}
+@media screen and (max-width: 428px) {
+  .modal-form {
+    width: 95%;
+    max-width: 392px;
+    height: 95%;
+    max-height: 584px;
+    overflow: scroll;
+  }
 }
 .is-hidden {
   visibility: hidden;
@@ -405,11 +426,9 @@ address {
   display: block;
   margin-bottom: 4px;
 }
-
 .field-input {
   position: relative;
 }
-
 .username {
   width: 100%;
   height: 40px;
@@ -420,11 +439,9 @@ address {
   outline: transparent;
   transition: border-color var(--transition);
 }
-
 .username:focus {
   border-color: var(--iris-color);
 }
-
 .icon-lable {
   position: absolute;
   left: 16px;
@@ -433,15 +450,12 @@ address {
   transition: fill var(--transition);
   fill: var(--navi-blue-color);
 }
-
 .username:focus + .icon-lable {
   fill: var(--iris-color);
 }
-
 .comments {
   margin-bottom: 16px;
 }
-
 .comment {
   width: 100%;
   height: 120px;
@@ -457,22 +471,18 @@ address {
   resize: none;
   transition: border-color var(--transition);
 }
-
 .comment:focus {
   border-color: var(--iris-color);
 }
-
 .privacy {
   margin-bottom: 24px;
 }
-
 .privacy-lable {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: var(--light-slate-color);
 }
-
 .checkbox {
   width: 16px;
   height: 16px;
@@ -486,13 +496,11 @@ address {
   fill: transparent;
   margin-right: 8px;
 }
-
 .policy:checked + .privacy-lable .checkbox {
   border: none;
   background-color: var(--ocean-color);
   fill: var(--cloud-color);
 }
-
 .privacy-link {
   font-style: normal;
   font-weight: 400;
@@ -502,7 +510,6 @@ address {
   text-decoration-line: underline;
   color: var(--iris-color);
 }
-
 .button-send {
   min-width: 169px;
   height: 56px;
@@ -520,12 +527,12 @@ address {
   transition: background-color var(--transition);
   margin: 0 auto;
 }
-
 .button-send:hover,
 .button-send:focus {
   background: var(--ocean-color);
 }
-/*mobile menu*/
+
+/*--------------------------mobile menu------------------------*/
 
 .menu-toggle {
   height: 40px;
@@ -545,7 +552,6 @@ address {
   right: 12px;
   bottom: 16px;
 }
-
 .menu-toggle:hover,
 .menu-toggle:focus {
   background-color: rgba(0, 0, 0, 0.1);
@@ -553,7 +559,6 @@ address {
 .icon-mobile-menu {
   fill: var(--navi-blue-color);
 }
-
 .mobile-container {
   position: fixed;
   top: 0;
@@ -561,14 +566,13 @@ address {
   width: 100%;
   height: 100%;
   padding: 80px 0 40px 40px;
-  z-index: 999;
-  transform: translateX(100%);
+
+  transform: translateX(-100%);
   transition: transform (--transition);
   background: var(--white-color);
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
-
 .mobile-container.is-open {
   transform: translateX(0);
 }
@@ -593,7 +597,7 @@ address {
   align-items: flex-start;
   gap: 40px;
   padding: 0px;
-  margin-bottom: 284px;
+  margin-bottom: 100px;
 }
 
 .mobile-nav-item {
@@ -611,7 +615,7 @@ address {
 
 .mobile-contacts {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   align-items: flex-start;
   gap: 40px;
   padding: 0px;
@@ -625,7 +629,8 @@ address {
   letter-spacing: 0.02em;
   color: var(--slate-color);
 }
-.mobile-contacts-item:last-child .link {
+.mobile-contacts-item:hover,
+.mobile-contacts-item:focus {
   font-size: 36px;
   font-weight: 700;
   line-height: 1.11;
@@ -634,12 +639,16 @@ address {
   color: var(--iris-color);
 }
 .mobile-social {
-  display: flex;
+  display: inline-flex;
   align-items: flex-start;
   gap: 56px;
   margin: 0;
 }
-
+@media screen and (max-width: 427px) {
+  .mobile-social {
+    gap: 28px;
+  }
+}
 .mobile-social-item .link {
   display: flex;
   align-items: center;
@@ -663,7 +672,7 @@ address {
 /*index.html*/
 /*Перша секція*/
 
-.hero-section {
+.hero {
   background-image: linear-gradient(
       to bottom,
       rgba(46, 47, 66, 0.7),
@@ -692,6 +701,12 @@ address {
   max-width: 320px;
   margin: 0 auto;
   margin-bottom: 72px;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--white-color);
 }
 .order-service-button {
   cursor: pointer;
@@ -705,10 +720,10 @@ address {
   line-height: 1.5;
   letter-spacing: 0.04em;
   display: block;
-  min-width: 169px;
+  width: 169px;
   height: 56px;
   margin: 0 auto;
-  transition: background-color var(--transition);
+  transition: background-color var(--transition), box-shadow var(--transition);
 }
 .order-service-button:hover,
 .order-service-button:focus {
@@ -718,9 +733,6 @@ address {
 
 /*Друга секція*/
 
-.strategy-section {
-  padding: 96px 0;
-}
 .stratgy-section-list {
   display: flex;
   flex-wrap: wrap;
@@ -728,7 +740,8 @@ address {
 }
 .stratgy-section-item {
   width: 100%;
-  text-align: center;
+}
+.stratgy-section-item:not(:last-child) {
   margin-bottom: 72px;
 }
 .strategy-section-title {
@@ -739,6 +752,10 @@ address {
   text-transform: capitalize;
   color: var(--navi-blue-color);
   margin-bottom: 8px;
+  text-align: center;
+}
+.strategy-section-text {
+  font-weight: 500;
 }
 
 .benefits {
@@ -755,7 +772,7 @@ address {
 
 /*Третя секція*/
 
-.product-section {
+.product {
   display: none;
   text-align: center;
 }
@@ -778,10 +795,9 @@ address {
 
 /*Четверта секція*/
 
-.team-section {
+.team {
   background-color: var(--cloud-color);
   text-align: center;
-  padding: 96px 0;
 }
 .team-section-title {
   text-align: center;
@@ -848,8 +864,7 @@ address {
   background-color: var(--ocean-color);
 }
 /*Customers section*/
-.customers-section {
-  padding: 96px 0;
+.customers {
   margin: 0;
   text-align: center;
 }
@@ -904,7 +919,7 @@ address {
 }
 /*Portfolio.html*/
 
-.portfolio-section {
+.portfolio {
   padding-top: 48px;
   padding-bottom: 48px;
 }
@@ -1007,7 +1022,7 @@ address {
   .menu-toggle {
     display: none;
   }
-  .hero-section {
+  .hero {
     background-image: linear-gradient(
         to bottom,
         rgba(46, 47, 66, 0.7),
@@ -1022,7 +1037,7 @@ address {
     max-width: 768px;
   }
   @media (min-resolution: 192dpi) {
-    .hero-section {
+    .hero {
       background-image: linear-gradient(
           to bottom,
           rgba(46, 47, 66, 0.7),
@@ -1032,11 +1047,13 @@ address {
     }
   }
   .title {
+    color: var(--white-color);
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
     max-width: 496px;
     margin-bottom: 36px;
-  }
-  .strategy-section {
-    padding: 96px 0;
   }
   .stratgy-section-list {
     flex-direction: row;
@@ -1055,7 +1072,7 @@ address {
     text-align: left;
     margin: 0;
   }
-  .product-section {
+  .product {
     display: none;
   }
   .team-section-list {
@@ -1067,11 +1084,6 @@ address {
     column-gap: 24px;
     align-items: center;
     justify-content: center;
-  }
-  .customers-section {
-    padding: 96px 0;
-    margin: 0;
-    text-align: center;
   }
   .customers-list {
     display: flex;
@@ -1157,28 +1169,6 @@ address {
     width: 1158px;
     padding: 0 15px;
   }
-  .title-h1 {
-    color: var(--white-color);
-    font-weight: 700;
-    font-size: 56px;
-    line-height: 1.07;
-    letter-spacing: 0.02em;
-  }
-  .title-h2 {
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: var(--navi-blue-color);
-  }
-  .title-h3 {
-    color: var(--navi-blue-color);
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-  }
   .menu-toggle {
     display: none;
   }
@@ -1191,7 +1181,7 @@ address {
     flex-direction: row;
     gap: 40px;
   }
-  .hero-section {
+  .hero {
     background-image: linear-gradient(
         to bottom,
         rgba(46, 47, 66, 0.7),
@@ -1206,7 +1196,7 @@ address {
     max-width: 1440px;
   }
   @media (min-resolution: 192dpi) {
-    .hero-section {
+    .hero {
       background-image: linear-gradient(
           to bottom,
           rgba(46, 47, 66, 0.7),
@@ -1219,9 +1209,6 @@ address {
     max-width: 496px;
     margin: 0 auto;
     margin-bottom: 48px;
-  }
-  .strategy-section {
-    padding: 120px 0;
   }
   .strategy-section-title {
     color: var(--navi-blue-color);
@@ -1245,11 +1232,6 @@ address {
   .product-section {
     display: block;
     padding-bottom: 120px;
-    text-align: center;
-  }
-  .customers-section {
-    padding: 120px 0;
-    margin: 0;
     text-align: center;
   }
   .customers-list {
@@ -1298,7 +1280,7 @@ address {
   .subscribe-email-input {
     width: 264px;
   }
-  .portfolio-section {
+  .portfolio {
     padding-top: 96px;
     padding-bottom: 120px;
   }
@@ -1311,7 +1293,7 @@ address {
     flex-direction: row;
     flex-wrap: wrap;
     column-gap: 24px;
-    row-gap: 72px;
+    row-gap: 48px;
   }
   .product-item {
     width: calc((100% - 48px) / 3);
