--- a/css/styles.css
+++ b/css/styles.css
@@ -566,7 +566,6 @@ address {
   width: 100%;
   height: 100%;
   padding: 80px 0 40px 40px;
-
   transform: translateX(-100%);
   transition: transform (--transition);
   background: var(--white-color);
@@ -639,16 +638,12 @@ address {
   color: var(--iris-color);
 }
 .mobile-social {
-  display: inline-flex;
+  display: flex;
   align-items: flex-start;
   gap: 56px;
   margin: 0;
 }
-@media screen and (max-width: 427px) {
-  .mobile-social {
-    gap: 28px;
-  }
-}
+
 .mobile-social-item .link {
   display: flex;
   align-items: center;
@@ -659,7 +654,21 @@ address {
   height: 40px;
   position: relative;
 }
-
+@media screen and (max-width: 427px) {
+  .mobile-nav-item {
+    font-size: 24px;
+  }
+  .mobile-contacts-item {
+    font-size: 18px;
+  }
+  .mobile-contacts-item:hover,
+  .mobile-contacts-item:focus {
+    font-size: 24px;
+  27}
+  .mobile-social {
+    gap: 18px;
+  }
+}
 .icon-menu {
   display: inline-block;
   position: absolute;
