--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
   --dairy-color: #fcfcfc;
   --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-/*------------------------Global--------------------------*/
+/*--------------------------------Global----------------------------*/
 body {
   position: relative;
   background-color: var(--white-color);
@@ -76,6 +76,11 @@ p {
   padding: 0 15px;
   margin: 0 auto;
 }
+@media screen and (max-width: 427px) {
+  .container {
+    width: 100%;
+  }
+}
 @media screen and (min-width: 428px) {
   .container {
     width: 428px;
@@ -117,7 +122,7 @@ p {
   padding: 0;
 }
 
-/*-----------------------Header--------------------------*/
+/*-------------------------------Header----------------------------*/
 
 .menu {
   position: relative;
@@ -204,7 +209,7 @@ address {
   color: var(--ocean-color);
 }
 
-/*--------------------------Footer--------------------------*/
+/*-------------------------------Footer-----------------------------*/
 
 .footer-section {
   background-color: var(--navi-blue-color);
@@ -324,17 +329,7 @@ address {
   fill: var(--cloud-color);
 }
 
-/*--------------------------Modal---------------------------*/
-
-@keyframes openingModal {
-  0% {
-    transform: scale(0);
-  }
-
-  100% {
-    transform: scale(1);
-  }
-}
+/*-------------------------------Modal-----------------------------*/
 .modal {
   display: flex;
   position: fixed;
@@ -351,6 +346,15 @@ address {
   animation-direction: normal;
   transition: opacity var(--transition), visibility var(--transition);
 }
+@keyframes openingModal {
+  0% {
+    transform: scale(0);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
 .modal-form {
   position: absolute;
   background-color: var(--cornflower-color);
@@ -361,7 +365,6 @@ address {
   padding: 0;
   padding: 72px 24px 24px;
   border-radius: 4px;
-
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -532,7 +535,7 @@ address {
   background: var(--ocean-color);
 }
 
-/*--------------------------mobile menu------------------------*/
+/*----------------------------Mobile menu--------------------------*/
 
 .menu-toggle {
   height: 40px;
@@ -598,7 +601,6 @@ address {
   padding: 0px;
   margin-bottom: 100px;
 }
-
 .mobile-nav-item {
   font-weight: 700;
   font-size: 36px;
@@ -607,11 +609,9 @@ address {
   text-transform: capitalize;
   color: var(--navi-blue-color);
 }
-
 .active {
   color: var(--ocean-color);
 }
-
 .mobile-contacts {
   display: flex;
   flex-direction: column;
@@ -620,7 +620,6 @@ address {
   padding: 0px;
   margin-bottom: 48px;
 }
-
 .mobile-contacts-item {
   font-weight: 500;
   font-size: 20px;
@@ -643,7 +642,6 @@ address {
   gap: 56px;
   margin: 0;
 }
-
 .mobile-social-item .link {
   display: flex;
   align-items: center;
@@ -664,7 +662,7 @@ address {
   .mobile-contacts-item:hover,
   .mobile-contacts-item:focus {
     font-size: 24px;
-  27}
+  }
   .mobile-social {
     gap: 18px;
   }
@@ -678,8 +676,8 @@ address {
   transform: translate(-50%, -50%);
 }
 
-/*index.html*/
-/*Перша секція*/
+/*==============================INDEX.HTML=========================*/
+/*---------------------------------Hero----------------------------*/
 
 .hero {
   background-image: linear-gradient(
@@ -740,7 +738,7 @@ address {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-/*Друга секція*/
+/*------------------------------Benefits----------------------------*/
 
 .stratgy-section-list {
   display: flex;
@@ -766,7 +764,6 @@ address {
 .strategy-section-text {
   font-weight: 500;
 }
-
 .benefits {
   display: none;
   align-items: center;
@@ -779,7 +776,7 @@ address {
   margin-bottom: 8px;
 }
 
-/*Третя секція*/
+/*-----------------------------Production---------------------------*/
 
 .product {
   display: none;
@@ -802,7 +799,7 @@ address {
   border: 1px solid var(--cornflower-color);
 }
 
-/*Четверта секція*/
+/*------------------------------Team--------------------------------*/
 
 .team {
   background-color: var(--cloud-color);
@@ -841,7 +838,6 @@ address {
   margin: 0;
   margin-bottom: 8px;
 }
-
 .social-icons-list {
   display: flex;
   margin: 0;
@@ -850,7 +846,6 @@ address {
   justify-content: center;
   gap: 24px;
 }
-
 .social-icons-item {
   height: 40px;
   width: 40px;
@@ -872,7 +867,9 @@ address {
 .social-link:focus {
   background-color: var(--ocean-color);
 }
-/*Customers section*/
+
+/*------------------------------Customers---------------------------*/
+
 .customers {
   margin: 0;
   text-align: center;
@@ -926,7 +923,8 @@ address {
 .customers-link:hover .customers-icon {
   fill: var(--ocean-color);
 }
-/*Portfolio.html*/
+
+/*=============================PORTFOLIO.html=======================*/
 
 .portfolio {
   padding-top: 48px;
@@ -975,7 +973,11 @@ address {
 .product-item {
   width: 396px;
 }
-
+@media screen and (max-width: 427px) {
+  .product-item {
+    width: 100%;
+  }
+}
 .product-card {
   padding: 32px 16px;
   border: 1px solid var(--cornflower-color);
@@ -984,18 +986,15 @@ address {
 .product-title {
   margin-bottom: 8px;
 }
-
 .product-item .link:hover,
 .product-item .link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-
 .overlay-card {
   position: relative;
   overflow: hidden;
 }
-
 .overlay {
   position: absolute;
   top: 0;
@@ -1008,11 +1007,12 @@ address {
   transform: translateY(100%);
   transition: transform var(--transition);
 }
-
 .product-item .link:hover .overlay,
 .product-item .link:focus .overlay {
   transform: translateY(0);
 }
+
+/*==========================FOR TABLET=============================*/
 
 @media screen and (min-width: 768px) {
   .container {
@@ -1173,6 +1173,9 @@ address {
     width: calc((100% - 24px) / 2);
   }
 }
+
+/*=============================FOR DESKTOP==========================*/
+
 @media screen and (min-width: 1158px) {
   .container {
     width: 1158px;
