--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@
 body {
   position: relative;
   background-color: var(--white-color);
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   color: var(--slate-color);
   font-size: 16px;
@@ -127,8 +127,8 @@ p {
 .menu {
   position: relative;
   border-bottom: 1px solid var(--cornflower-color);
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .menu-nav {
   display: flex;
@@ -139,7 +139,7 @@ p {
   padding: 24px 0;
 }
 .logo {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   text-transform: uppercase;
   font-size: 18px;
   line-height: 1.17;
@@ -175,7 +175,7 @@ p {
 }
 .current::after {
   position: absolute;
-  content: "";
+  content: '';
   display: block;
   left: 0;
   bottom: 0;
@@ -192,12 +192,12 @@ p {
 address {
   font-style: normal;
   font-size: 12px;
+  line-height: 1.1;
+  letter-spacing: 0.04em;
   padding: 16px 0;
   margin-left: auto;
 }
 .list-contacts {
-  line-height: 1.2;
-  letter-spacing: 0.04em;
   color: var(--slate-color);
   transition: color var(--transition);
 }
@@ -225,7 +225,7 @@ address {
   margin-bottom: 72px;
 }
 .footer-logo {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
@@ -306,7 +306,7 @@ address {
   height: 40px;
   margin: 0 auto;
   align-items: center;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -493,8 +493,7 @@ address {
   height: 16px;
   border: 1px solid var(--navi-blue-modal-color);
   border-radius: 2px;
-  transition: background-color var(--transition), border var(--transition),
-    fill var(--transition);
+  transition: background-color var(--transition), border var(--transition), fill var(--transition);
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -519,7 +518,7 @@ address {
   min-width: 169px;
   height: 56px;
   display: block;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -576,8 +575,8 @@ address {
   transform: translateX(-100%);
   transition: transform 500ms ease-in-out;
   background: var(--white-color);
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .mobile-container.is-open {
   transform: translateX(0);
@@ -685,11 +684,7 @@ address {
 /*---------------------------------Hero----------------------------*/
 
 .hero {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
+  background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
     url(../images/main/hero-bg-mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -702,11 +697,7 @@ address {
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx) {
   .hero-section {
-    background-image: linear-gradient(
-        to bottom,
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
       url(../images/main/hero-bg-mob@x2.jpg);
   }
 }
@@ -728,7 +719,7 @@ address {
   background-color: var(--iris-color);
   border: none;
   border-radius: 4px;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -829,8 +820,8 @@ address {
   background-color: var(--white-color);
   width: 264px;
   border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .team-cards {
   padding: 32px 0px;
@@ -945,7 +936,7 @@ address {
   margin-bottom: 48px;
 }
 .filter-button {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -994,8 +985,8 @@ address {
 }
 .product-item .link:hover,
 .product-item .link:focus {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .overlay-card {
   position: relative;
@@ -1032,16 +1023,13 @@ address {
   .address-list {
     display: flex;
     flex-direction: column;
+    gap: 12px;
   }
   .menu-toggle {
     display: none;
   }
   .hero {
-    background-image: linear-gradient(
-        to bottom,
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
       url(../images/main/hero-bg-tab.jpg);
     background-repeat: no-repeat;
     background-position: center;
@@ -1054,11 +1042,7 @@ address {
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
     .hero {
-      background-image: linear-gradient(
-          to bottom,
-          rgba(46, 47, 66, 0.7),
-          rgba(46, 47, 66, 0.7)
-        ),
+      background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
         url(../images/main/hero-bg-tab@x2.jpg);
     }
   }
@@ -1156,7 +1140,6 @@ address {
   .footer-subscribe {
     margin: 0;
     margin-left: 108px;
-
     text-align: left;
   }
   .footer-subscribe-text {
@@ -1221,11 +1204,7 @@ address {
     gap: 40px;
   }
   .hero {
-    background-image: linear-gradient(
-        to bottom,
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
       url(../images/main/hero-bg-desk.jpg);
     background-repeat: no-repeat;
     background-position: center;
@@ -1238,11 +1217,7 @@ address {
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
     .hero {
-      background-image: linear-gradient(
-          to bottom,
-          rgba(46, 47, 66, 0.7),
-          rgba(46, 47, 66, 0.7)
-        ),
+      background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
         url(../images/main/hero-bg-desk@x2.jpg);
     }
   }
@@ -1264,6 +1239,9 @@ address {
   .stratgy-section-list {
     display: flex;
     gap: 24px;
+  }
+  .strategy-section-text {
+    font-weight: 400;
   }
   .stratgy-section-item {
     width: calc((100% - 72px) / 4);
@@ -1309,7 +1287,7 @@ address {
     color: var(--white-color);
     letter-spacing: 0.02em;
     width: 264px;
-    margin-bottom: 16px;
+    margin: 0;
   }
   .footer-tab-social {
     margin: 0;
